<resources>
    <string name="launcher_name" translatable="false">Slim FB Viewer</string>
    <string name="actionbar_name" translatable="false">SlimFB</string>
    <string name="urlFacebookMobileBase" translatable="false">https://touch.facebook.com/</string>
    <string name="urlFacebookMobile" translatable="false">https://touch.facebook.com/home.php</string>
    <string name="urlMessages" translatable="false">https://mbasic.facebook.com/messages</string>
    <string name="urlFacebookMobileNotifications" translatable="false">https://touch.facebook.com/notifications</string>
    <string name="urlFacebookMobileMessages" translatable="false">https://touch.facebook.com/messages/</string>
    <string name="urlFacebookMobileMessagesComposer" translatable="false">https://touch.facebook.com/messages/compose/dialog/?</string>
    <string name="urlFacebookMobileFriends" translatable="false">https://touch.facebook.com/friends</string>
    <string name="urlFacebookMobileBookmarks" translatable="false">https://touch.facebook.com/bookmarks</string>
    <string name="urlFacebookMobileSearch" translatable="false">https://touch.facebook.com/search</string>
    <string name="home" translatable="false">Home</string>
    <string name="top">Top</string>
    <string name="mainDeveloper" translatable="false">Cactus World Android Development</string>
    <string name="refresh">Refresh</string>
    <string name="openInBrowser">Open in the browser</string>
    <string name="settings">Settings</string>
    <string name="shareThisApp">Share this app</string>
    <string name="prefCat_fb_settings_title">Facebook Settings</string>
    <string name="prefCat_app_settings_title">App Settings</string>
    <string name="prefCat_app_information_title">App Information</string>
    <string name="title_recentNewsFirst">Order the news feed by most recent</string>
    <string name="summary_recentNewsFirst">Instead of by popularity</string>
    <string name="title_centerTextPosts">Center the post text</string>
    <string name="summary_centerTextPosts">The text of each post will be centered</string>
    <string name="summary_addSpaceBetweenPosts">There will be more space between posts</string>
    <string name="title_addSpaceBetweenPosts">More space between posts</string>
    <string name="summary_creditsCssThemes">Thanks for the fantastic themes!</string>
    <string name="summary_theme">Choose the theme that you like</string>
    <string name="title_fixedBar">Fixed top bar</string>
    <string name="summary_fixedBar">The blue bar will remain stuck on the top</string>
    <string name="title_noBar">No top bar</string>
    <string name="summary_noBar">The blue bar will be removed from the top</string>
    <string name="title_hideSponsoredPosts">Don\'t show sponsored posts</string>
    <string name="summary_hideSponsoredPosts">Some sponsored posts will be hidden</string>
    <string name="title_openExternalPagesInSlimFBViewer">Open external links in SlimFBViewer</string>
    <string name="summary_openExternalPagesInSlimFBViewer">Opens external links in SlimFBViewer instead of opening them in the system web browser.</string>
    <string name="title_downloadImages">Save Data </string>
    <string name="summary_downloadImages">Don\'t download images</string>
    <string name="summary_allowGeolocation">Facebook will be able to access to your position</string>
    <string name="title_allowGeolocation">Allow the use of GPS</string>
    <string name="version">Version</string>
    <string name="credits">Credits</string>
    <string name="prefCat_otherCredits_title">Other</string>
    <string name="prefCat_developersCredits_title">Developers</string>
    <string name="summary_LeonardoRignanese">Creator and developer of the app</string>
    <string name="prefCat_translatorsCredits_title">Translators</string>
    <string name="prefCat_designersCredits_title">Designers</string>
    <string name="donate">DONATE</string>
    <string name="donateToContributeWithoutPaypal">I chose to make this app for free. Would you like to
        contribute by offering me a beer? Let\'s get in touch!</string>
    <string name="summary_you">It\'s also thanks to you that this app exists</string>
    <string name="title_you">You are important</string>
    <string name="titleNoConnection">Oops, there is a problem!</string>
    <string name="descriptionNoConnection">Check the connection and refresh.</string>
    <string name="awards">This is an open-source app.</string>
    <string name="thanks">Thanks!</string>
    <string name="downloadOrShareWithBrowser">You can download or share this image by opening with a browser.</string>
    <string name="shareThisLink">Share this link</string>
    <string name="summary_SlimSocial">Thanks to his work I could develop this sleeker version of a viewer for the social network with added functionality</string>
    <string name="summary_FaceSlim">Without them, I couldn\'t add some attractive functions. If you are a developer, you have to see their massive work!</string>
    <string name="summary_lRemainl">Creator of the magnificent logo</string>
    <string name="summary_Pharetra">Full of talent and creativity</string>
    <string name="exit">Exit</string>
    <string name="downloadThisApp" translatable="false">Download Slim FB Viewer:   https://play.google.com/store/apps/details?id=de.cactus_world.SlimFBViewer</string>
    <string name="noPersonalInformationAreShared">No personal or private information about you or your device is collected or transmitted by this app.</string>
    <string name="title_theme">Themes</string>
    <string name="applyingChanges">Applying changes…</string>
    <string name="title_textSize">Text Size</string>
    <string name="title_enableFastShare">Enable Fast Share</string>
    <string name="summary_enableFastShare">With Fast Share, you can share any link simply by tapping and holding it</string>
    <string name="summary_textSize">Choose the text size that you prefer</string>
    <string name="refreshToApply">Refresh Facebook to apply the changes</string>
    <string name="summary_AdvancedWebView">Part of this app is based on their work</string>
    <string name="title_translate">Would you like to translate this app?</string>
    <string name="summary_translate">Use my WebTool: tap here, select your language, generate the builder, correct errors, generate, and send me the \'strings.xml\' file by email.</string>
    <string name="title_removeMessengerDownload">Remove \'Download Messenger\' ads</string>
    <string name="summary_removeMessengerDownload">The ads with \'Install Messenger\' will be hidden</string>
    <string name="supportMe">Support me</string>
    <string name="contribute">Contribute</string>
    <string name="messages">Messages</string>
    <string name="close">Close </string>
    <string name="acceptPermissionAndRetry">Accept permissions and retry!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="downloadingPhoto">Downloading photo…</string>
    <string name="askDownloadPhoto">Download photo?</string>
    <string name="holdImageToDownload">Hold the image to download!</string>
    <string name="title_rate">Rate this app</string>
    <string name="summary_rate">You can support me writing a nice review in the Play Store. Please, if something doesn\'t work, contact me before writing a bad review</string>
    <string name="title_enableMessagesShortcut">Enable messages shortcut</string>
    <string name="summary_enableMessagesShortcut">When enabled, the Slim FB Viewer messages tab will open when you tap on the Facebook messages icon</string>
    <string name="title_useSlimSocialSubfolderToDownloadedFiles">Use \'SlimFBViewer\' subfolder</string>
    <string name="summary_useSlimSocialSubfolderToDownloadedFiles">Save images in a subfolder rather than in the \'Download\' folder</string>
    <string name="shareLink">Share this page</string>
    <string name="title_enableNotifications">Enable Notifications</string>
    <string name="noNotificationEnjoyLife">I am looking for the best way to implement them. In the meanwhile, enjoy life without Facebook\'s interruptions :)</string>
    <string name="paypalDonationLink" translatable="false">https://cactus_world.github.io/</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="myWebsite" translatable="false">https://cactus_world.github.io/</string>
    <string name="supportMyProjects">It contains info about me and links to support my projects</string>
    <string name="visitMyWebsite">Visit my website</string>
    <string name="friends">Friendlist</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="messageHistorySelector" translatable="false">href="/messages/?no_hist=</string>
    <string name="summary_noMessageHistoryEntry">Opening messages tab will not be included in history stack.</string>
    <string name="title_noMessageHistoryEntry">No entry for message tab in history</string>
    <string name="summary_enableAlternativeMessagesDisplay">Use alternative display method for facebook messages.</string>
    <string name="title_enableAlternativeMessagesDisplay">Alternative message display</string>
    <string name="summary_enableInfoOnAlternativeMessagesDisplay">Enable the info button for profile on alternative display method for facebook messages.</string>
    <string name="title_enableInfoOnAlternativeMessagesDisplay">Info on alternative message display</string>
    <string name="urlFacebookDesktopMessagesOld">https://www.messenger.com/</string>
    <string name="urlFacebookDesktopMessages">https://www.facebook.com/messages/</string>
    <string name="externalPageRequest"><![CDATA[<html><p><h1>External page requested.</h1><p> Redirecting...<p><h2> Press back to return to previous page.</h2></p></html>]]></string>
</resources>