<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefCat_fb_settings_title">

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_recentNewsFirst"
            android:summary="@string/summary_recentNewsFirst"
            android:title="@string/title_recentNewsFirst" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_centerTextPosts"
            android:summary="@string/summary_centerTextPosts"
            android:title="@string/title_centerTextPosts" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_addSpaceBetweenPosts"
            android:summary="@string/summary_addSpaceBetweenPosts"
            android:title="@string/title_addSpaceBetweenPosts" />
        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_noMessageHistoryEntry"
            android:summary="@string/summary_noMessageHistoryEntry"
            android:title="@string/title_noMessageHistoryEntry" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_fixedBar"
            android:summary="@string/summary_fixedBar"
            android:title="@string/title_fixedBar" />
        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="true"
            android:key="pref_noBar"
            android:summary="@string/summary_noBar"
            android:title="@string/title_noBar" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_removeMessengerDownload"
            android:summary="@string/summary_removeMessengerDownload"
            android:title="@string/title_removeMessengerDownload" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_hideSponsoredPosts"
            android:summary="@string/summary_hideSponsoredPosts"
            android:title="@string/title_hideSponsoredPosts" />

        <!--<it.rignanese.slimfacebook.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_useMessenger"
            android:summary="@string/summary_useMessenger"
            android:title="@string/title_useMessenger"/>-->

        <ListPreference
            android:defaultValue="100"
            android:entries="@array/listTextSize"
            android:entryValues="@array/listValuesTextSize"
            android:key="pref_textSize"
            android:summary="@string/summary_textSize"
            android:title="@string/title_textSize" />

        <ListPreference
            android:defaultValue="Standard"
            android:entries="@array/listThemes"
            android:entryValues="@array/listValuesThemes"
            android:key="pref_theme"
            android:summary="@string/summary_theme"
            android:title="@string/title_theme" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefCat_app_settings_title">


        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"
            android:key="pref_enableMessagesShortcut"
            android:summary="@string/summary_enableMessagesShortcut"
            android:title="@string/title_enableMessagesShortcut" />


        <!--Set the saving data -->
        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="false"

            android:key="pref_doNotDownloadImages"
            android:summary="@string/summary_downloadImages"
            android:title="@string/title_downloadImages" />

        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="true"
            android:key="pref_useSlimSocialSubfolderToDownloadedFiles"
            android:summary="@string/summary_useSlimSocialSubfolderToDownloadedFiles"
            android:title="@string/title_useSlimSocialSubfolderToDownloadedFiles" />

        <!--Allow Geolocation -->
        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="true"

            android:key="pref_allowGeolocation"
            android:summary="@string/summary_allowGeolocation"
            android:title="@string/title_allowGeolocation" />

        <!--Enable FastShare -->
        <de.cactus_world.SlimFBViewer.utils.SwitchWithoutBugs
            android:defaultValue="true"

            android:key="pref_enableFastShare"
            android:summary="@string/summary_enableFastShare"
            android:title="@string/title_enableFastShare" />

        <!-- Notifications
        <it.rignanese.slimfacebook.utils.SwitchWithoutBugs
            android:key="pref_notifications"
            android:title="@string/title_enableNotifications"/>-->
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/supportMe">
        <PreferenceScreen
            android:summary="@string/summary_rate"
            android:title="@string/title_rate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=de.cactus_world.SlimFBViewer" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/supportMyProjects"
            android:title="@string/visitMyWebsite">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/myWebsite" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/prefCat_app_information_title">
        <PreferenceScreen android:summary="@string/noPersonalInformationAreShared" />

        <PreferenceScreen
            android:summary="@string/summary_translate"
            android:title="@string/title_translate">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://stringsxmlbuilder.site88.net/index.php?originalXmlURL=https://raw.githubusercontent.com/rignaneseleo/SlimSocial-for-Facebook/master/SlimFacebook/app/src/main/res/values/strings.xml" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_credits"
            android:title="@string/credits">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="de.cactus_world.SlimFBViewer.settings.CreditsActivity"
                android:targetPackage="de.cactus_world.SlimFBViewer" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="pref_key_version"
            android:title="@string/version" />
    </PreferenceCategory>
</PreferenceScreen>